# drf_project

./: .env  .env.example  .flake8  Dockerfile  README.md  docker-compose.yaml  payments_fixture.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
materials/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_alter_subscription_options.py
nginx/: nginx.conf
users/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_options_payments_link_and_more.py
