[tool.poetry]
name = "drf-project"
version = "0.1.0"
description = ""
authors = ["Матвей Новиков <originsik@gmail.com>"]
readme = "README.md"

packages = [
    {include = "config"},
    {include = "materials"},
    {include = "users"}
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"
black = "^24.10.0"
isort = "^5.13.2"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.8"
stripe = "^11.4.1"
celery = "^5.4.0"
eventlet = "^0.38.2"
redis = "^5.2.1"
django-celery-beat = "^2.7.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
